--- a/data.yml
+++ b/data.yml
@@ -2,4 +2,4 @@ titre: Maison de ville avec cour intérieure et terrasses
 lieu: BOURG-DE-PEAGE
 contacte: Cyrille BOUVET-06 22 85 16 39 / Yaël BORJA-07 51 62 09 13
 prix:  234 000 €
-geolocalisation: https://www.google.com/maps/d/edit?mid=1Iz4XYN7175pe7IbmjV2W5xVqnhwgFJU&ll=45.03801438673739%2C5.053480899999991&z=18 
+geolocalisation: https://www.google.com/maps/d/embed?mid=1Iz4XYN7175pe7IbmjV2W5xVqnhwgFJU&ll=45.03801438673739%2C5.053480899999991&z=18 
